discussion/kv_engine/176433/176433_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan config duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-31 11:32:46.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 11:38:51.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48804/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41030/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41030/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41030/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19870/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:186:47: error: use of undeclared identifier "maxScanDuration" [clang-diagnostic-error]
                                taskable, vb, maxScanDuration));
                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19870/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9664/ : FAILURE

Compile error at [2022-08-31T11:35:10.831Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9664/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9565/ : FAILURE

Compile error at [2022-08-31T11:34:08.957Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21114/ : FAILURE

Compile error at [2022-08-31T11:37:06.878Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21822/ : FAILURE

Compile error at [2022-08-31T11:34:47.919Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22175/ : FAILURE

Compile error at [2022-08-31T11:34:48.762Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22912/ : FAILURE

Compile error at [2022-08-31T11:33:57.647Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22912/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30204/ : FAILURE

Compile error at [2022-08-31T11:34:32.424Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30204/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19091/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
